# crie

./: .dockerignore  .gitignore  .mergify.yml  Brewfile  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  crie.go  crie.lang.yml  crie.yml  go.mod  go.sum  requirements.txt
.github/: .goreleaser.yml  dependabot.yml  mergify.yml  rel_brew.yml  rel_go.yml  rel_go_macos-latest.yml  rel_go_ubuntu-latest.yml  renovate.json
.github/workflows/: codeql.yml  crie.yml  docker-build-template.yml  docker-img-apk.yml  docker-img-go.yml  docker-img-npm.yml  docker-img-pip.yml  docker-publish.yml  docker-push-template.yml  img-apk.yml  img-go.yml  img-npm.yml  img-pip.yml  img-rust.yml  release.yml  scorecard.yml
api/: chk.go  conf.go  execlimit.go  execlimit_linux.go  execute.go  filelists.go  fmt.go  functions.go  helpers.go  languages.go  proj.go  runner.go  state.go  types.go  yaml.go
api/clitool/: clitool.go  languages.go  types.go
api/imp/: clitool.go
cli/: commands.go  version.go
crie/: commands.go  main.go  version.go
doc/: README.md  completion.md  demo.txt  example.yml  example_language_override.yml  example_project.yaml  schema.json  schema_lang.json  schema_proj.json  supported_languages.md  use_cases.md
img/: docker-compose.yml
imp/: clitool.go  languages.go  proto.go  vale.go
script/: bootstrap  clean  completions  crie  download  env  genres  stats  test
verify/: .clang-format  CONTRIBUTING.md  README.md
verify/lang/cpp/: CMakeLists.txt  Dockerfile
verify/lang/cpp/script/: build.sh
verify/lang/cpp/src/: example.cc  example.h
(+278 files in other folders)
